...
            {rol === "superadmin" ? "Superadmin" : esAdmin ? "Administrador" : "Vendedor"}
          </Text>
        </View>

        {/* RESUMEN DE MI TIENDA */}
        <View style={estilos.seccion}>
          <Text style={estilos.tituloSeccion}>Resumen</Text>
          <View style={estilos.tarjetaPrincipal}>
            <FontAwesome5
              name="dollar-sign"
              size={120}
              color="rgba(0,0,0,0.1)"
              style={estilos.marcaAguaPrincipal}
...
